<resources>
    <string name="app_name">前链财经</string>
    <string name="copyright">深圳市九曲互动软件有限公司 \n Copytight @2018 版权所有 </string>
    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="message">消息</string>
    <string name="mine">我</string>
    <string name="app_rule">点击下一步即代表同意《%s用户使用协议》</string>
    <string name="app_rule_register">点击注册即代表同意《%s用户使用协议》</string>
    <string name="user_rule_register">用户使用协议</string>
    <string name="hot">热门</string>
    <string name="the_last">最新</string>
    <string name="notification">通知</string>
    <string name="system_notification">系统消息</string>
    <string name="system_notification_null">暂无系统消息</string>
    <string name="critical">收到的评论</string>
    <string name="comment">评论</string>
    <string name="like">赞</string>
    <string name="liked">收到的赞</string>
    <string name="like_me">赞了我</string>
    <string name="like_me_more">等人赞了我</string>
    <string name="comment_me">评论了我</string>
    <string name="comment_me_more">等人评论了我</string>
    <string name="recieved_review">提交评论置顶</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_digg_much_hint">等人</string>
    <string name="comment_fail">评论失败</string>
    <string name="comment_ing">评论中&#8230;</string>
    <string name="default_message_group">群组</string>
    <string name="has_no_body">还没有人</string>
    <string name="ts_helper">我的助手</string>
    <string name="ts_helper_default_tip">小助手在线，有问题及时反馈，即时快速反应</string>
    <string name="personal_page">个人主页</string>
    <string name="my_info">我的投稿</string>
    <string name="ranking">排行榜</string>
    <string name="dig_ranking">点赞排行榜</string>
    <string name="gold">金币</string>
    <string name="mine_collect">收藏</string>
    <string name="download_recommend">下载推荐</string>
    <string name="suggetion">意见反馈</string>
    <string name="question_answer">Q&amp;A</string>
    <string name="draft_box">草稿箱</string>
    <string name="certification">认证</string>
    <string name="my_certification">我的认证</string>
    <string name="setting">设置</string>
    <string name="wallet">数字资产</string>
    <string name="cash">我的钱包</string>
    <string name="team">我的团队</string>
    <string name="stair">一级</string>
    <string name="second_level">二级</string>
    <string name="three_level">三级</string>
    <string name="earnings_details">收益明细</string>
    <string name="select_currency_hint">请选择币种</string>
    <string name="earnings">收益</string>
    <string name="time">时间</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="me_music">购买的音乐</string>
    <string name="follow">关注</string>
    <string name="friends">好友</string>
    <string name="fans">粉丝</string>
    <string name="system_info">系统消息</string>
    <string name="my_qr_code_content">uid=%d</string>
    <string name="my_qr_code_title">扫一扫</string>
    <string name="qr_scan_alert">扫描二维码，添加关注</string>
    <string name="qr_scan_failed_alert">扫码失败，请重新扫描</string>
    <string name="my_qr_code_share">分享我的二维码</string>
    <string name="information">资讯</string>
    <string name="market">行情</string>
    <string name="friend_ram">朋友动态</string>
    <string name="chanel">频道</string>
    <string name="active">活动</string>
    <string name="buy_goods">购物</string>
    <string name="find_person">@string/find_someone</string>
    <string name="near_person">附近的人</string>
    <string name="group">社区</string>
    <string name="quiz">话题问答</string>
    <string name="user_info">个人资料</string>
    <string name="change_head_icon">更换头像</string>
    <string name="user_name">用户名</string>
    <string name="edit_user_name_hint">用户名不能含有特殊字符</string>
    <string name="edit_user_name">设置用户名</string>
    <string name="sex">性别</string>
    <string name="select_sex">选择性别</string>
    <string name="city">城市</string>
    <string name="select_city">选择居住地</string>
    <string name="select_tag">选择标签</string>
    <string name="tag">标签</string>
    <string name="introduce">简介</string>
    <string name="edit_introduce">编辑简介</string>
    <string name="all">全部</string>
    <string name="edit_userinfo_success">修改成功</string>
    <string name="edit_userinfo_failure">修改失败</string>
    <string name="edit_userinfo_ing">修改中&#8230;</string>
    <string name="update_head_success">头像上传成功</string>
    <string name="update_head_failure">头像上传失败</string>
    <string name="update_head_ing">头像上传中&#8230;</string>
    <string name="vertify">认证</string>
    <string name="tags_manager">标签管理</string>
    <string name="account_manager">账户管理</string>
    <string name="change_password">修改密码</string>
    <string name="password_manager">密码管理</string>
    <string name="privacy_manager">隐私设置</string>
    <string name="password_pay">支付密码</string>
    <string name="set_password_pay">设置支付密码</string>
    <string name="change_password_pay">修改支付密码</string>
    <string name="forget_password_pay">忘记支付密码</string>
    <string name="clean_cache">清理缓存</string>
    <string name="is_sure_clean_cache">缓存大小:%s，确定清理缓存？</string>
    <string name="about_us">关于我们</string>
    <string name="check_version">版本更新</string>
    <string name="download_new_version">立即更新</string>
    <string name="version_name">版本号：%s</string>
    <string name="version_content_length">大小：%s M</string>
    <string name="ignore_new_version">忽略</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_sure">退出</string>
    <string name="is_sure_login_out">确定退出登录？</string>
    <string name="clean_success">删除成功</string>
    <string name="clean_failure">删除失败!</string>
    <string name="cache_zero_size">0.0B</string>
    <string name="change">更改</string>
    <string name="account_bind_phone">绑定手机号</string>
    <string name="account_bind_email">绑定邮箱</string>
    <string name="account_bind_qq">绑定QQ</string>
    <string name="account_bind_wechat">绑定微信</string>
    <string name="account_bind_weibo">绑定微博</string>
    <string name="binding">确定绑定</string>
    <string name="continue_binding">继续绑定</string>
    <string name="remove_binding">解除绑定</string>
    <string name="had_binding">已绑定</string>
    <string name="not_binding">未绑定</string>
    <string name="crop_head_icon">更换头像</string>
    <string name="crop_bg_cover">更换封面</string>
    <string name="crop_ing">图片裁剪中&#8230;</string>
    <string name="crop_success">图片裁剪成功</string>
    <string name="crop_failure">图片裁剪失败</string>
    <string name="album_list">相册</string>
    <string name="preview">预览</string>
    <string name="album_selected_count">完成(%1$d/%2$d)</string>
    <string name="album_finish">完成</string>
    <string name="album_selected">选择</string>
    <string name="save_to_photo">保存至手机相册</string>
    <string name="save_success">图片保存成功</string>
    <string name="save_pic_ing">保存中&#8230;</string>
    <string name="save_failure1">图片保存失败</string>
    <string name="save_failure2">sd卡不存在</string>
    <string name="all_photos">所有图片</string>
    <string name="toll_setting">收费选项</string>
    <string name="music_fm">音乐FM</string>
    <string name="single_music">单曲</string>
    <string name="music_album">专辑</string>
    <string name="music_lyric">暂无歌词</string>
    <string name="info_title">完善文章信息</string>
    <string name="info_editor_default_content">编辑文章正文</string>
    <string name="info_title_necessary">请填写正确的标题或者内容</string>
    <string name="info_published">已发布</string>
    <string name="info_publishing">投稿中</string>
    <string name="info_publishsuccess">投稿成功，等待审核</string>
    <string name="info_publishfailed">投稿失败</string>
    <string name="info_publishrefuse">被驳回</string>
    <string name="info_cover">上传封面</string>
    <string name="reset_cover">重置封面</string>
    <string name="cover_upload_success">封面上传成功</string>
    <string name="info_dig">点赞</string>
    <string name="info_dig_cancel">取消点赞</string>
    <string name="info_list_count">%1$s\t·\t%2$s浏览\t·\t%3$s</string>
    <string name="info_publish_original">原创</string>
    <string name="info_top">顶</string>
    <string name="bull">利好</string>
    <string name="bear_news">利空</string>
    <string name="info_publish_hint">提示</string>
    <string name="info_publish_hint_certification">只有认证过的用户才可以投稿，是否去认证?</string>
    <string name="info_publish_go_to_certification">去认证</string>
    <string name="testtym">%1$d,%2$s</string>
    <string name="info_publish_hint_pay">投稿一次需付费%1$d%2$s，是否继续投稿？</string>
    <string name="info_publish_go_to_next">继续投稿</string>
    <string name="edit_info">编辑文章</string>
    <string name="info_title_hint">输入标题，20字以内</string>
    <string name="info_content_hint">编辑文章正文</string>
    <string name="info_choose_categorys">选择栏目</string>
    <string name="info_choose_tags">选择标签</string>
    <string name="info_max_choose_tags_format">最多选择%d个选择</string>
    <string name="info_from">文章来源</string>
    <string name="info_from_hint">不填写则默认为原创</string>
    <string name="info_author">作者</string>
    <string name="info_author_hint">不填写则默认为本站用户名</string>
    <string name="info_summary">摘要</string>
    <string name="info_summary_hint">请输入摘要信息</string>
    <string name="info_relate">相关资讯</string>
    <string name="info_apply_for_top">申请文章置顶</string>
    <string name="info_alert_reapply_for_top">已经置顶，不能重复申请</string>
    <string name="info_alert_top_auditing">审核中，不能重复申请</string>
    <string name="info_delete">删除</string>
    <string name="info_deleting">删除中</string>
    <string name="dynamic_list_more_comment">查看全部评论</string>
    <string name="dynamic_list_delete_dynamic">删除动态</string>
    <string name="dynamic_list_share_dynamic">分享</string>
    <string name="dynamic_list_collect_dynamic">收藏</string>
    <string name="dynamic_list_uncollect_dynamic">取消收藏</string>
    <string name="dynamic_list_report_dynamic">举报</string>
    <string name="dynamic_list_delete_comment">删除评论</string>
    <string name="dynamic_list_top_comment">申请评论置顶</string>
    <string name="dynamic_list_resend_comment">重发评论</string>
    <string name="resend">重新发送</string>
    <string name="reply">回复 %s:</string>
    <string name="reply_str">回复</string>
    <string name="send_dynamic">发布动态</string>
    <string name="send_words_dynamic">文字</string>
    <string name="send_image_dynamic">图片</string>
    <string name="send_question">提问</string>
    <string name="send_post">发帖</string>
    <string name="send_info">投稿</string>
    <string name="send_vidoe">视频</string>
    <string name="open_zhibo">直播</string>
    <string name="dynamic_title_hint">有标题更吸引人</string>
    <string name="dynamic_close_pay">暂时关闭发布付费内容</string>
    <string name="dynamic_content_hint">输入要说的话，图文结合更精彩哦</string>
    <string name="dynamic_content_no_pic_hint">输入要说的话</string>
    <string name="dynamic_send_cancel_hint">你还有没有发布的内容，是否放弃发布？</string>
    <string name="video_dynamic_send_cancel_hint">动态编辑未完成，是否保存本次编辑？</string>
    <string name="dynamic_send_toll">是否收费</string>
    <string name="dynamic_send_toll_way">选择图片收费方式</string>
    <string name="dynamic_send_toll_count">选择图片收费金额</string>
    <string name="dynamic_send_toll_title">设置图片收费</string>
    <string name="dynamic_send_toll_quick">设置金额</string>
    <string name="dynamic_send_toll_reset">重置</string>
    <string name="dynamic_send_toll_words_count">设置文字收费金额</string>
    <string name="dynamic_send_toll_money">自定义金额</string>
    <string name="dynamic_send_toll_look">查看收费</string>
    <string name="dynamic_send_toll_download">下载收费</string>
    <string name="dynamic_send_toll_notes">注：超过%1$d字部分内容收费</string>
    <string name="recommend_group">热门推荐</string>
    <string name="submit">提交</string>
    <string name="certification_edit_info_phone">请填写您手机号码</string>
    <string name="rank">排行榜</string>
    <string name="hint_report">填写举报原因</string>
    <string name="mobile_contact_information">联系方式</string>
    <string name="search_group_name">搜索群名称</string>
    <string name="no_result_group">该群不存在</string>
    <string name="allow_anyone_add">允许任何人</string>
    <string name="need_verify_add">需要验证消息</string>
    <string name="refuse_anyone_add">拒绝任何人加我</string>
</resources>