<com.wcy.overscroll.OverScrollLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overscroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--行情-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_market"
                app:leftText="@string/market"
                app:rightImage="@mipmap/ic_arrow_smallgrey" />
            <!--动态-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/friend_ram"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_friend_ram"
                app:leftText="@string/friend_ram"
                app:rightImage="@mipmap/ic_arrow_smallgrey" />
            <!--社区-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_chanel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="visible"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_channel"
                app:leftText="@string/group"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="true" />

            <!--问答-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_qa"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:layout_marginTop="@dimen/spacing_mid"
                android:visibility="visible"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_queansw"
                app:leftText="@string/quiz"
                app:rightImage="@mipmap/ic_arrow_smallgrey" />


            <!--活动-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_active"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="gone"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_activity"
                app:leftText="@string/active"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false" />

            <!--排行榜-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_rank"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="visible"

                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_rankinglist"
                app:leftText="@string/rank"
                app:rightImage="@mipmap/ic_arrow_smallgrey" />

            <!--音乐FM-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_music"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="gone"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_music"
                app:leftText="@string/music_fm"
                app:rightImage="@mipmap/ic_arrow_smallgrey" />
            <!--购物-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_buy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_buy"
                app:leftText="@string/buy_goods"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false" />
            <!--扫一扫-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_scan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:layout_marginTop="@dimen/spacing_mid"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_scan"
                app:leftText="@string/my_qr_code_title"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false" />
            <!--找人-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_person"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:layout_marginTop="@dimen/spacing_mid"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_findpeople"
                app:leftText="@string/find_person"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false" />

            <!--附近的人-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/find_nearby"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="gone"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/discover_ico_nearby"
                app:leftText="@string/near_person"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false" />


        </LinearLayout>
    </ScrollView>
</com.wcy.overscroll.OverScrollLayout>