<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.zhiyicx.thinksnsplus.widget.UserInfoInroduceInputView
        android:id="@+id/et_report_content"
        style="@style/style_edit_cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_mid"
        android:padding="@dimen/spacing_normal"
        app:hintContent="@string/hint_report"
        app:limitSize="@integer/report_content_max_size"
        app:showLimitSize="@integer/report_content_input_size"
        app:showLines="@integer/dynamic_content_show_lines"/>
    <LinearLayout
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40">
        <TextView
            android:layout_marginLeft="@dimen/dp20"
            android:gravity="center_vertical"
            android:text="@string/mobile_contact_information"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
            android:maxLength="11"
            android:id="@+id/ed_input_phone"
            android:background="@color/white"
            android:hint="@string/certification_edit_info_phone"
            android:textSize="@dimen/dp12"
            android:textColor="@color/text_color_black"
            android:inputType="phone"
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:id="@+id/submit_bt"
        android:text="@string/submit"
        android:background="@color/themeColor"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp40"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40" />
</LinearLayout>