<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp14"
        android:paddingTop="@dimen/dp14">

        <TextView
            android:id="@+id/tv_earning_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_begin_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/begin_time"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_earnings_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/earnings"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/sp16" />

    </LinearLayout>

    <View style="@style/style_divider_horizontal" />

    <include layout="@layout/fragment_tslist" />
</LinearLayout>